[package]
name = "dlhook_macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Macro crate for dlhook"
repository = "https://github.com/chlorodose/dlhook"
homepage = "https://github.com/chlorodose/dlhook"
documentation = "https://docs.rs/dlhook"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.43"
syn = { version = "2.0.114", features = ["full"] }
